# varmng-helpers

./: .gitmodules  CMakeLists.txt  README.md
tests/: CMakeLists.txt  basic.cc  testhelpers.h
tests/integration/: CMakeLists.txt
tests/integration/gui_1/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
tests/motest/: CMakeLists.txt  LICENSE  ReadMe.md  dynamictreemodel.cc  dynamictreemodel.h  modeltest.cc  modeltest.h
tests/unit/: CMakeLists.txt  manager-tests.cc  unit_test_helper.h
tests/unit/models/: vardef-tests.cc
